--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@apollo/client": "^3.7.12",
     "@apollo/server": "^4.3.2",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
+    "mongoose": "^7.1.0",
     "nodemon": "^2.0.20",
     "uuid": "^9.0.0"
   }
